deficulties in deploying frontend

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ JWT_EXPIRE=1h
 CLOUDINARY_CLOUD_NAME=djboaeuys
 CLOUDINARY_API_KEY=642193495667213
 CLOUDINARY_SECRET_KEY=JHoxVq64XzUqArLMiXf8xHSEPIM
+
+FRONTEND_URI=blog-clientside.vercel.app
