adding small fix in dotenv

--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ CLOUDINARY_CLOUD_NAME=djboaeuys
 CLOUDINARY_API_KEY=642193495667213
 CLOUDINARY_SECRET_KEY=JHoxVq64XzUqArLMiXf8xHSEPIM
 
-FRONTEND_URI=https://blog-serverside-opal.vercel.app
+FRONTEND_URI=https://blog-clientside.vercel.app
 
 
